# cookiecutter

./: README.md
cookiecutter/: LICENSE  pyproject.toml
cookiecutter/docs/: conf.py  index.rst  installation.rst  usage.rst
cookiecutter/tests/: __init__.py  test_cookiecutter_template.py
cookiecutter_template/: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  tox.ini
cookiecutter_template/.github/: ISSUE_TEMPLATE.md
cookiecutter_template/docs/: Makefile  make.bat
cookiecutter_template/src/cookiecutter_template/: __init__.py  cli.py
