[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cookiecutter_template"
version = "0.0.1"
description = "This is the basic and standard template using cookiecutter for any project's folder structure"
readme = "README.rst"
authors = [
  {name = "Ujjwal Singh", email = "cs24resch11014@iith.ac.in"}
]
maintainers = [
  {name = "Ujjwal Singh", email = "cs24resch11014@iith.ac.in"}
]
classifiers = [

]
license = {text = "GNU General Public License v3"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/champ-ujjwal/cookiecutter_template/issues"
changelog = "https://github.com/champ-ujjwal/cookiecutter_template/blob/master/changelog.md"
homepage = "https://github.com/champ-ujjwal/cookiecutter_template"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

